--- a/src/CoordinatorPages/Coo_CompanyProfile.module.css
+++ b/src/CoordinatorPages/Coo_CompanyProfile.module.css
@@ -936,17 +936,23 @@ ease-in-out;
 
   /* Red scrollbar on mobile */
   .co-cp-table-scroll-wrapper::-webkit-scrollbar,
-  .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar,
-  
+  .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar {
+    width: 15px;
+  }
   .co-cp-table-scroll-wrapper::-webkit-scrollbar-track,
-  .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar-track,
-  
+  .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar-track {
+    background: #f0f2f5;
+  }
   .co-cp-table-scroll-wrapper::-webkit-scrollbar-thumb,
-  .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar-thumb,
-  
+  .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar-thumb {
+    background-color: #d23b42;
+    border-radius: 20px;
+    border: 3px solid #f0f2f5;
+  }
   .co-cp-table-scroll-wrapper::-webkit-scrollbar-thumb:hover,
-  .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar-thumb:hover,
-  
+  .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar-thumb:hover {
+    background-color: #b32d34;
+  }
   .co-cp-floating-input-container{max-width:400px;}
   
   .co-cp-drive-table-container__table-wrapper::-webkit-scrollbar:horizontal {
