--- a/src/CoordinatorPages/Coo_Profile.module.css
+++ b/src/CoordinatorPages/Coo_Profile.module.css
@@ -1654,14 +1654,20 @@
 
 /* Red scrollbar on mobile */
 @media (max-width: 1200px) {
-  .co-profile-content::-webkit-scrollbar,
-  
-  .co-profile-content::-webkit-scrollbar-track,
-  
-  .co-profile-content::-webkit-scrollbar-thumb,
-  
-  .co-profile-content::-webkit-scrollbar-thumb:hover,
-  
+  .co-profile-content::-webkit-scrollbar {
+    width: 10px;
+  }
+  .co-profile-content::-webkit-scrollbar-track {
+    background: #f0f2f5;
+  }
+  .co-profile-content::-webkit-scrollbar-thumb {
+    background-color: #d23b42;
+    border-radius: 20px;
+    border: 3px solid #f0f2f5;
+  }
+  .co-profile-content::-webkit-scrollbar-thumb:hover {
+    background-color: #b32d34;
+  }
 
 }
 /* --- Success Popup Styles --- */
